Fixed button padding on mobile

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -46,7 +46,7 @@
 	&.full-height {
 		min-height: 100vh;
 
-		@media only screen and (max-width: 1024px) {
+		@media only screen and (max-width: 767px) {
 			min-height: 125vh;
 			overflow: visible;
 		}
