--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -19,6 +19,7 @@ a.btn {
 
   @media screen and (max-width: 1024px) {
     width: 90%;
+    padding: 15px 0;
   }
 
   &.white {
